Added bgvid copy for testing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Background Video & Header -->
 
     <div class="banner">
-        <video src="./files/bgvid.mov" type="video/mp4" autoplay muted loop></video>    
+        <video src="./files/bgvid2.mov" type="video/mp4" autoplay muted loop></video>    
 
         <!-- Header -->
 
