Added Scroll button and moved sign up button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <a href="#locations">Popular Places</a>
                         <!-- <a href="#package">Packages</a> -->
                         <a href="./contact.html">Contact Us</a>
+                        <a href="./SignUp.html" class="button">Sign Up</a>
                     </li>
                 </ul>
             </nav>
@@ -44,7 +45,12 @@
             <div class="title">
                 <h1>GO EXPLORE</h1>
                 <p>Plan your trip with us and travel the world in style.Every journey, an indulgence!</p>
-                <a href="./SignUp.html" class="button">SignUp Now!</a>
+            </div>
+            
+            <div class="scroll">
+                <a href="#container"><span></span>
+                    <p>Book Now!</p>
+                </a>
             </div>
         </div>
     </div>
@@ -298,6 +304,7 @@
         </div>
 
     </section> --> 
+
 
     <!-- Footer -->
 
