Added new flight page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <h4>Flight Services</h4>
                 <p>Boarding and Landing</p>
-                <a href="https://www.wfs.aero/" class="button">Book Now!</a>
+                <a href="flight.html" class="button">Book Now!</a>
             </div>
 
             <div class="container-box">
@@ -140,13 +140,13 @@
                 </div>
             </a>
 
-            <a href="./locations.html#port-blair" target="_blank">
+            <!-- <a href="./locations.html#port-blair" target="_blank">
                 <div class="col-content">
                     <img src="./files/l7.jpg" alt="">
                     <h5>Andaman & Nicobar</h5>
                     <p>Port Blair</p>
                 </div>
-            </a>
+            </a> -->
 
             <a href="./locations.html#paris" target="_blank">
                 <div class="col-content">
