--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,6 @@
 <body class="contactbody">
     <nav>
         <img src="./files/logo2.png" class="logo" alt="Logo" title="FirstFlight Travels">
-        
         <ul class="navbar">
             <li>
                 <a href="./index.html">Home</a>
@@ -28,6 +27,7 @@
                 <a href="./index.html#locations">Popular Places</a>
                 <!-- <a href="#package">Packages</a> -->
                 <a href="./contact.html">Contact Us</a>
+                <a href="./SignUp.html" class="button">Sign Up</a>
             </li>
         </ul>
     </nav>
