Added and edited Footer

--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,7 @@
                 <div class="footlinks">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="./register.html">Register</a></li>
-                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./SignUp.html">Sign Up</a></li>
                         <li><a href="./contact.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -68,18 +67,13 @@
                 <div class="footlinks">
                     <h4>Connect</h4>
                     <div class="social">
-                        <a href="https://www.facebook.com/mohd.rahil.blogger" target="_blank"><i
-                                class='bx bxl-facebook'></i></a>
-                        <a href="https://www.instagram.com/mohdrahil101" target="_blank"><i
+                        <a href="https://www.instagram.com/_shrihari_._/" target="_blank"><i
                                 class='bx bxl-instagram'></i></a>
-                        <a href="https://www.twitter.com/mohdrahil101" target="_blank"><i
+                        <a href="https://x.com/_shrihari__" target="_blank"><i
                                 class='bx bxl-twitter'></i></a>
-                        <a href="https://www.linkedin.com/in/mohdrahil101" target="_blank"><i
+                        <a href="https://www.linkedin.com/in/shrihari-v-40626b277/" target="_blank"><i
                                 class='bx bxl-linkedin'></i></a>
-                        <a href="https://www.youtube.com/techdollarz" target="_blank"><i class='bx bxl-youtube'></i></a>
-                        <a href="https://www.mohdrahil.wordpress.com" target="_blank"><i
-                                class='bx bxl-wordpress'></i></a>
-                        <a href="https://www.github.com/mohdrahil101" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://github.com/Shrihari6105" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                 </div>
 
@@ -87,7 +81,7 @@
         </div>
 
         <div class="end">
-            <p>Copyright © 2025 Instant Travels All Rights Reserved.<br>Website developed by: Shrihari</p>
+            <p>Copyright © 2025 Instant Travels All Rights Reserved.</p>
         </div>
     </section>
 
