--- a/flight.html
+++ b/flight.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="card custom-bg w-75 p-4 d-flex">
                 <div class="row">
-                    <div class="pb-3 h3 text-left">Flight Search &#128747;</div>
+                    <div class="pb-3 h3 text-left">Flight Search</div>
                 </div>
                 <form id="flight-form" onsubmit="return validateForm()">
                     <div class="row">
@@ -131,6 +131,41 @@
                 </form>
             </div>
         </div>
-    </section> 
+    </section>
+    
+   
+    <section class="footer">
+        <div class="foot">
+            <div class="footer-content">
+
+                <div class="footlinks">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="./SignUp.html">Sign Up</a></li>
+                        <!-- <li><a href="./about.html">About Us</a></li> -->
+                        <li><a href="./contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+
+                <div class="footlinks">
+                    <h4>Connect</h4>
+                    <div class="social">
+                        <a href="https://www.instagram.com/_shrihari_._/" target="_blank"><i
+                                class='bx bxl-instagram'></i></a>
+                        <a href="https://x.com/_shrihari__" target="_blank"><i
+                                class='bx bxl-twitter'></i></a>
+                        <a href="https://www.linkedin.com/in/shrihari-v-40626b277/" target="_blank"><i
+                                class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/Shrihari6105" target="_blank"><i class='bx bxl-github'></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="end">
+            <p>Copyright © 2025 Instant Travels All Rights Reserved.</p>
+        </div>
+    </section>
 </body>
 </html>
