--- a/SignUp.html
+++ b/SignUp.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./files/logo2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/signup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +13,21 @@
 </head>
 
 <body>
-    <img src="files/sgup.jpg" alt="Background Image" style="width: 100%; height: 100%; position: absolute; z-index: -1;">
+    <img src="files/signup.jpg" alt="Background Image" style="width: 100%; height: 100%; position: absolute; z-index: -1;">
+
+    <nav>
+        <img src="./files/logo2.png" class="logo" alt="Logo" title="FirstFlight Travels">
+            <ul class="navbar">
+                <li>
+                    <a href="./index.html">Home</a>
+                    <a href="./index.html#container">Services</a>
+                    <a href="./index.html#locations">Popular Places</a>
+                    <a href="./contact.html">Contact Us</a>
+                    <a href="./SignUp.html" class="button">Sign Up</a>
+                </li>
+        </ul>
+    </nav>
+
     <div class="main">
         <input type="checkbox" id="chk" aria-hidden="true">
         <div class="signup">
