--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                         <a href="#home">Home</a>
                         <a href="#container">Services</a>
                         <a href="#locations">Popular Places</a>
-                        <!-- <a href="#package">Packages</a> -->
                         <a href="./contact.html">Contact Us</a>
                         <a href="./SignUp.html" class="button">Sign Up</a>
                     </li>
@@ -44,7 +43,7 @@
 
             <div class="title">
                 <h1>GO EXPLORE</h1>
-                <p>Plan your trip with us and travel the world in style.Every journey, an indulgence!</p>
+                <p>Plan your trip with us and travel the world in style. <br>Every journey, an indulgence!</p>
             </div>
             
             <div class="scroll">
@@ -77,7 +76,7 @@
                 </div>
                 <h4>Train Services</h4>
                 <p>Arrival and Departure</p>
-                <a href="https://www.irctc.co.in/nget/train-search" class="button">Book Now!</a>
+                <a href="train.html" class="button">Book Now!</a>
             </div>
 
             <div class="container-box">
@@ -86,7 +85,7 @@
                 </div>
                 <h4>Bus Services</h4>
                 <p>Pick-up/drop</p>
-                <a href="https://www.busindia.com/" class="button">Book Now!</a>
+                <a href="bus.html" class="button">Book Now!</a>
 
             </div>
 
@@ -96,10 +95,8 @@
                 </div>
                 <h4>Hotel Services</h4>
                 <p>Check-in/out</p>
-                <a href="https://in.hotels.com/" class="button">Book Now!</a>
+                <a href="hotel.html" class="button">Book Now!</a>
             </div>
-
-        </div>
 
         </div>
 
@@ -191,120 +188,6 @@
            
         </div>
     </section>
-
-    <!-- Packages -->
-
-    <!-- <section class="package" id="package">
-        <div class="package-title">
-            <h2>Packages</h2>
-        </div>
-
-        <div class="package-content">
-
-            <div class="box">
-                <div class="image">
-                    <img src="./files/p1.jpg" alt="">
-                    <h3>Rs.9,999/-</h3>
-                </div>
-
-                <div class="dest-content">
-                    <div class="location">
-                        <h4>Bronze</h4>
-                        <ul class="pac-details">
-                            <li>2 Star Hotel</li>
-                            <li>5 Nights Stay</li>
-                            <li>Free photo Session</li>
-                            <li>Friendly Tour Guide</li>
-                            <li>24/7 Customer Help Center</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="./files/p2.jpg" alt="">
-                    <h3>Rs.19,999/-</h3>
-                </div>
-
-                <div class="dest-content">
-                    <div class="location">
-                        <h4>Silver</h4>
-                        <ul class="pac-details">
-                            <li>3 Star Hotel</li>
-                            <li>7 Nights Stay</li>
-                            <li>Free photo Session</li>
-                            <li>Friendly Tour Guide</li>
-                            <li>24/7 Customer Help Center</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="./files/p3.jpg" alt="">
-                    <h3>Rs.29,999/-</h3>
-                </div>
-
-                <div class="dest-content">
-                    <div class="location">
-                        <h4>Gold</h4>
-                        <ul class="pac-details">
-                            <li>4 Star Hotel</li>
-                            <li>10 Nights Stay</li>
-                            <li>Breakfast and Dinner</li>
-                            <li>Free photo Session</li>
-                            <li>Friendly Tour Guide</li>
-                            <li>24/7 Customer Help Center</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="./files/p4.jpg" alt="">
-                    <h3>Rs.39,999/-</h3>
-                </div>
-
-                <div class="dest-content">
-                    <div class="location">
-                        <h4>Platinum</h4>
-                        <ul class="pac-details">
-                            <li>5 Star Hotel</li>
-                            <li>14 Nights Stay</li>
-                            <li>Breakfast, Lunch and Dinner</li>
-                            <li>Bornfire</li>
-                            <li>Free photo Session</li>
-                            <li>Friendly Tour Guide</li>
-                            <li>24/7 Customer Help Center</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-    </section>
-
-     Newsletter -->
-<!-- 
-    <section class="newsletter">
-        <div class="newstext">
-            <h2>Newsletter</h2>
-            <p>Subscribe to get offers and latest<br>updates every week!</p>
-        </div>
-
-        <div class="send">
-            <form action="">
-                <input type="email" name="emailid" placeholder="E-mail" required>
-                <input type="submit" value="Subscribe">
-            </form>
-        </div>
-
-    </section> --> 
-
 
     <!-- Footer -->
 
